# StreamSockets

./: .dockerignore  .gitignore  Cargo.toml  MIGRATION.md  PROTOCOL_UPGRADE.md  README.md  deny.toml  docker-compose.yml  pom.xml  rust-toolchain.toml
.github/workflows/: build-client.yml  build-server.yml  docker-build-push.yml  docker-rust.yml  docker.yml  release.yml  rust-soak.yml  rust.yml  testsuite.yml
authentication-server/: pom.xml
authentication-server/src/main/java/com/aayushatharva/streamsockets/authentication/server/: Accounts.java  TokenAuthentication.java
client/: pom.xml
client/src/main/java/com/aayushatharva/streamsockets/client/: DatagramHandler.java  Main.java  RetryManager.java  UdpServer.java  WebSocketClient.java  WebSocketClientHandler.java  WebSocketClientInitializer.java
client/src/test/java/com/aayushatharva/streamsockets/client/: ConnectionErrorHandlingTest.java  ConnectionRaceConditionTest.java  ExitOnFailureTest.java  RetryManagerTest.java  WebSocketClientHandlerTest.java
common/: pom.xml
common/src/main/java/com/aayushatharva/streamsockets/common/: Utils.java
docker/: Dockerfile-Client  Dockerfile-Client-Rust  Dockerfile-Server  Dockerfile-Server-Rust
docs/: v2.md
metrics/: pom.xml
metrics/src/main/java/com/aayushatharva/streamsockets/metrics/: MetricsRegistry.java  MetricsServer.java  MetricsServerHandler.java  MetricsServerInitializer.java
metrics/src/test/java/com/aayushatharva/streamsockets/metrics/: MetricsRegistryTest.java
server/: pom.xml
server/src/main/java/com/aayushatharva/streamsockets/server/: AuthenticationHandler.java  DownstreamHandler.java  Main.java  UdpTunnel.java  WebSocketServer.java  WebSocketServerHandler.java  WebSocketServerInitializer.java
server/src/main/resources/: log4j2.xml
streamsockets-auth/: Cargo.toml
streamsockets-auth/src/: lib.rs
streamsockets-auth/src/tests/: mod.rs
streamsockets-client/: Cargo.toml
streamsockets-client/src/: backoff.rs  fsm.rs  lib.rs  main.rs  queue.rs  ws.rs
streamsockets-client/src/backoff/tests/: mod.rs
streamsockets-client/src/queue/tests/: mod.rs
streamsockets-client/tests/: config_validation.rs  dial_refusal.rs  listener_oversize.rs  locked_source_shared.rs
streamsockets-core/: Cargo.toml
streamsockets-core/src/: buf_pool.rs  gro.rs  lib.rs  runtime.rs  udp_egress.rs  uring_udp.rs
streamsockets-core/src/buf_pool/tests/: mod.rs
streamsockets-core/src/gro/tests/: mod.rs
streamsockets-core/src/runtime/tests/: mod.rs
streamsockets-core/src/tests/: mod.rs
streamsockets-core/src/udp_egress/tests/: mod.rs
streamsockets-core/src/uring_udp/tests/: mod.rs
streamsockets-metrics/: Cargo.toml
streamsockets-metrics/src/: lib.rs
streamsockets-metrics/src/tests/: mod.rs
streamsockets-server/: Cargo.toml
streamsockets-server/src/: handshake.rs  lib.rs  main.rs  proxy_protocol.rs  tls.rs  tunnel.rs
streamsockets-testsuite/: Cargo.toml
streamsockets-testsuite/src/: lib.rs
streamsockets-testsuite/tests/: always_reconnect.rs  chaos_queue_overflow.rs  chaos_reconnect_storm.rs  close_1002_reconnect.rs  close_local_decode_transient.rs  e2e_authz.rs  e2e_basic.rs  e2e_concurrency.rs  e2e_dns.rs  e2e_reconnect.rs  e2e_v1_rejection.rs  exit_on_failure.rs  reconnect_replays_queue.rs  server_emits_close_on_proto_err.rs  soak_fd_leak.rs
streamsockets-testsuite/tests/common/: mod.rs
testsuite/: pom.xml
testsuite/src/test/java/com/aayushatharva/streamsockets/: DomainResolutionTest.java  EndToEndTest.java  MultiTunnelTest.java  MultipleConnectionsTest.java  ProtocolCompatibilityTest.java  ReconnectionTest.java  UdpEchoServer.java
testsuite/src/test/java/com/aayushatharva/streamsockets/authentication/server/: TokenAuthenticationReloadTest.java  TokenAuthenticationTest.java
testsuite/src/test/java/com/aayushatharva/streamsockets/server/: AuthenticationHandlerTest.java  EndToEndTest.java  UdpEchoServer.java
testsuite/src/test/resources/: accounts-domain.yml  accounts.yml  log4j2.xml
