[package]
name = "streamsockets-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "streamsockets-server"
path = "src/main.rs"

[dependencies]
streamsockets-core = { path = "../streamsockets-core" }
streamsockets-auth = { path = "../streamsockets-auth" }
streamsockets-metrics = { path = "../streamsockets-metrics" }

tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
hyper = { workspace = true, features = ["server", "http1"] }
hyper-util = { workspace = true, features = ["tokio", "server"] }
# Timer used for hyper builder.header_read_timeout

http-body-util = { workspace = true }
http = { workspace = true }
fastwebsockets = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
socket2 = { workspace = true }
ipnet = { workspace = true }
parking_lot = { workspace = true }
libc = "0.2"
futures-util = { workspace = true }
mimalloc = { workspace = true }
uuid = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
ppp = "2.2"
subtle = "2.6"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
